from __future__ import annotations

from dataclasses import dataclass
from datetime import datetime
from uuid import UUID


@dataclass(frozen=True, kw_only=True)
class PlayerMapStats:
    """Domain record; validation rules are specified but not implemented."""

    id: UUID
    version: int
    player_id: UUID
    team_id: UUID
    kills: int | None
    deaths: int | None
    assists: int | None
    adr: float | None
    kast: float | None
